fixed alignment of links

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ img {
 
 ul {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     list-style-type: none;
     margin: 0;
     padding: 0;
